# agentic-taxi-booking

./: .gitignore  AGENTS.md  deploy-secrets.sh  docker-compose.debug.example.yml  docker-compose.test.debug.example.yml  docker-compose.test.example.yml  docker-stack.yml  docker.example.yml  export-secrets.example.sh
myapp/: .dockerignore  Dockerfile  alembic.ini  app.py  pyproject.toml  pytest.ini  requirements.txt
myapp/.devcontainer/: devcontainer.json
myapp/agent/: agent.py  memory.py  prompt.py  redis_db.py  state.py  steps.py  tasks.py  tools.py  workflow.py
myapp/agent/_memory/: __init__.py  in_memory.py  interfaces.py  redis_memory.py
myapp/agent/_state/: __init__.py  domain.py  in_memory_state.py  redis_state.py
myapp/agent/_tool/: __init__.py  domain.py
myapp/agent/evaluations/: agent_evaluator.py  eval_framework.py  exp.1.py  performance_benchmarks.py  python_datasets.py  run_evaluation.py
myapp/config/: conf.py
myapp/controllers/: telegramp_controller.py  wasap_controller.py
myapp/db/: check_migrations.py  db.py  init_db.py  models.py  storage.py
myapp/db/migrate/: env.py
myapp/db/repositories/: base_repository.py  booking_repository.py  driver_repository.py  notification_repository.py
myapp/dtos/: dtos.py
myapp/jobs/: task.py  worker.py
myapp/services/: booking_service.py  conversation_archiver.py  driver_service.py  geolocation_service.py  match_service.py  notification_service.py  relay_service.py  telegram_service.py  whatsapp_service.py
myapp/test/: conftest.py
myapp/test/functional/: conftest.py
myapp/utils/: utils.py
(+4 files in other folders)
